Updated site title and fixed single expand/collapse.

--- a/app/assets/stylesheets/_facets.scss
+++ b/app/assets/stylesheets/_facets.scss
@@ -151,7 +151,7 @@ a.facet__title {
     }
 
     span.toggle {
-        color: $jet;
+        color: $red;
         font-size: rem-calc(20);
         position: relative;
         top: 0px;
@@ -159,7 +159,10 @@ a.facet__title {
 
         &.facet-expand {
             display: inline-block;
+
         }
+
+
 
         &.facet-collapse {
             display: none;
